sfdx-source/force-app/main/default/objects/Store_Detail__c/Store_Detail__c.object-meta.xml
<CustomObject>
    <description>LEM-15116: It indicates onboarding store details.</description>
    <label>Store Detail</label>
    <nameField>
        <displayFormat>SD-{0000}</displayFormat>
        <label>Onboarding Store Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Store Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>