sfdx-source/force-app/main/default/objects/Store_Detail__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>LEM-15113: It is used to store the address Information.</description>
    <label>Store Address</label>
    <type>Address</type>
</CustomField>