sfdx-source/force-app/main/default/objects/Store_Detail__c/fields/Address_ID__c.field-meta.xml
<CustomField>
    <fullName>Address_ID__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-18245: It stores corresponding GEO API Address ID.</description>
    <label>Address ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>