sfdx-source/force-app/main/default/objects/Store_Detail__c/fields/Address_Verification_Date__c.field-meta.xml
<CustomField>
    <fullName>Address_Verification_Date__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-18245: It stores Address verification date for an entity address.</description>
    <label>Address Verification Date</label>
    <type>DateTime</type>
</CustomField>