sfdx-source/force-app/main/default/objects/Store_Detail__c/fields/Address_Verification_Status__c.field-meta.xml
<CustomField>
    <fullName>Address_Verification_Status__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-18245: It stores address verification status of the store Detail.</description>
    <label>Address Verification Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unverified</fullName>
            </value>
            <value>
                <fullName>Verified</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>