sfdx-source/force-app/main/default/objects/Store_Detail__c/fields/Alternative_Store_Name_Mx_Portal__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Store_Name_Mx_Portal__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-15116: It indicates store name.</description>
    <inlineHelpText>ID provided by the Merchant</inlineHelpText>
    <label>Alternative Store Name (Mx Portal)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>