sfdx-source/force-app/main/default/objects/Store_Detail__c/fields/Birthdate__c.field-meta.xml
<CustomField>
    <fullName>Birthdate__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-15117: It indicates the birthdate.</description>
    <label>Birthdate</label>
    <type>Date</type>
</CustomField>