sfdx-source/force-app/main/default/objects/Store_Detail__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-15116: Indicates city.</description>
    <inlineHelpText>Captures billing city</inlineHelpText>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>