sfdx-source/force-app/main/default/objects/Store_Detail__c/fields/Coverage_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Start_Date__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-18245: It indicates when the store became in coverage.</description>
    <label>Came Into Coverage</label>
    <type>DateTime</type>
</CustomField>