sfdx-source/force-app/main/default/objects/Store_Detail__c/fields/Custom_Delivery_Fee__c.field-meta.xml
<CustomField>
    <fullName>Custom_Delivery_Fee__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-16078: Indicates custom delivery fee for self-delivery.</description>
    <inlineHelpText>Custom delivery fee for self-delivery</inlineHelpText>
    <label>Custom Delivery Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>