sfdx-source/force-app/main/default/objects/Store_Detail__c/fields/Delay_Tablet_Shipment__c.field-meta.xml
<CustomField>
    <fullName>Delay_Tablet_Shipment__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-15116: Indicates if tablet shipment is requested to be delayed.</description>
    <inlineHelpText>Select Yes if tablet shipment is requested to be delayed</inlineHelpText>
    <label>Delay Tablet Shipment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>