sfdx-source/force-app/main/default/objects/Store_Detail__c/fields/DM_Email__c.field-meta.xml
<CustomField>
    <fullName>DM_Email__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>LEM-15116: It indicates DM email.</description>
    <label>Decision Maker Email</label>
    <type>Email</type>
</CustomField>