sfdx-source/force-app/main/default/objects/Store_Detail__c/fields/DM_First_Name__c.field-meta.xml
<CustomField>
    <fullName>DM_First_Name__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>LEM-15116: It indicates DM first name.</description>
    <label>Decision Maker First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>