sfdx-source/force-app/main/default/objects/Store_Detail__c/fields/DM_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>DM_Last_Name__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>LEM-15116: It indicates DM last name.</description>
    <label>Decision Maker Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>