sfdx-source/force-app/main/default/objects/Store_Detail__c/fields/DM_Phone__c.field-meta.xml
<CustomField>
    <fullName>DM_Phone__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>LEM-15116: It indicates DM phone (formatted as (999) 999-9999).</description>
    <label>Decision Maker Phone</label>
    <type>Phone</type>
</CustomField>