sfdx-source/force-app/main/default/objects/Store_Detail__c/fields/Duplicate_Check_Status__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Check_Status__c</fullName>
    <description>LEM-18245: It holds the status of data sync between Store Detail and Store Account.</description>
    <label>Duplicate Check Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Duplicate Processed</fullName>
            </value>
            <value>
                <fullName>Duplicate Not Processed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>