sfdx-source/force-app/main/default/objects/Store_Detail__c/fields/Hours_of_Operation__c.field-meta.xml
<CustomField>
    <fullName>Hours_of_Operation__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-15116: Indicates the Mx store hours of operations.</description>
    <inlineHelpText>Signifies the Mx store hours of operations</inlineHelpText>
    <label>Hours of Operation</label>
    <type>TextArea</type>
</CustomField>