sfdx-source/force-app/main/default/objects/Store_Detail__c/fields/In_Store_Pickup_Instructions__c.field-meta.xml
<CustomField>
    <fullName>In_Store_Pickup_Instructions__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-15116: Indicates any in-store pickup instructions once the Dasher has arrived at the store.</description>
    <inlineHelpText>Please add any in-store pickup instructions once the Dasher has arrived at the store (e.g. pickup counter placement, etc.)</inlineHelpText>
    <label>In-Store Pickup Instructions</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>