sfdx-source/force-app/main/default/objects/Store_Detail__c/fields/Inflation_Rounding_Unit__c.field-meta.xml
<CustomField>
    <fullName>Inflation_Rounding_Unit__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-15116: Signifies the menu inflation rounding unit.</description>
    <label>Inflation Rounding Unit</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>