sfdx-source/force-app/main/default/objects/Store_Detail__c/fields/Institution_Number__c.field-meta.xml
<CustomField>
    <fullName>Institution_Number__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>LEM-15117: It stores Institution number.</description>
    <inlineHelpText>For Canadian merchants, please enter the merchant bank&apos;s institution number.</inlineHelpText>
    <label>Institution Number</label>
    <length>18</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>