sfdx-source/force-app/main/default/objects/Store_Detail__c/fields/Is_Store_For_No_Rep_Scenario__c.field-meta.xml
<CustomField>
    <fullName>Is_Store_For_No_Rep_Scenario__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Store For No Rep Scenario</label>
    <type>Checkbox</type>
</CustomField>