sfdx-source/force-app/main/default/objects/Store_Detail__c/fields/Legal_Business_Name__c.field-meta.xml
<CustomField>
    <fullName>Legal_Business_Name__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-23067: It specifies the legal business name.</description>
    <label>Legal Business Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>