sfdx-source/force-app/main/default/objects/Store_Detail__c/fields/Max_Delivery_Radius_KM__c.field-meta.xml
<CustomField>
    <fullName>Max_Delivery_Radius_KM__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-15116: Depicts the maximum delivery radius for the Mx.</description>
    <label>Max Delivery Radius</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>