sfdx-source/force-app/main/default/objects/Store_Detail__c/fields/Menu_to_be_Completed_By__c.field-meta.xml
<CustomField>
    <fullName>Menu_to_be_Completed_By__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-15116: Indicates who will complete Work Order menu.</description>
    <inlineHelpText>Signifies the team that will complete menu setup</inlineHelpText>
    <label>Menu to be Completed By</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account Owner</fullName>
            </value>
            <value>
                <fullName>DoorDash Onboarding Team</fullName>
            </value>
            <value>
                <fullName>Merchant</fullName>
            </value>
            <value>
                <fullName>None - Menu Setup Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>