sfdx-source/force-app/main/default/objects/Store_Detail__c/fields/Mx_Onboarding_Link__c.field-meta.xml
<CustomField>
    <fullName>Mx_Onboarding_Link__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-15116: It indicates Mx onboarding link.</description>
    <label>Mx Onboarding Link</label>
    <referenceTo>Mx_Onboarding_Link__c</referenceTo>
    <relationshipName>Store_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>