sfdx-source/force-app/main/default/objects/Store_Detail__c/fields/Need_to_Climb_Stairs__c.field-meta.xml
<CustomField>
    <fullName>Need_to_Climb_Stairs__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-16197 : Surface picklist that will map to the Accessibilities field on store for Seattle Dasher Requirements</description>
    <label>Need to Climb Stairs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>