sfdx-source/force-app/main/default/objects/Store_Detail__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>LEM-15116: It indicates phone.</description>
    <label>Phone (formatted as (999) 999-9999)</label>
    <type>Phone</type>
</CustomField>