sfdx-source/force-app/main/default/objects/Store_Detail__c/fields/POS_Integration_ID__c.field-meta.xml
<CustomField>
    <fullName>POS_Integration_ID__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-15116: Indicates the ID of the associated Mx Store POS. Needed to complete POS integration process.</description>
    <inlineHelpText>Signifies the ID of the associated Mx Store POS. Needed to complete POS integration process</inlineHelpText>
    <label>POS Integration ID</label>
    <type>TextArea</type>
</CustomField>