sfdx-source/force-app/main/default/objects/Store_Detail__c/fields/POS_Integration_Type__c.field-meta.xml
<CustomField>
    <fullName>POS_Integration_Type__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-15116: Signifies the live POS integrations.</description>
    <inlineHelpText>Signifies the live POS integrations</inlineHelpText>
    <label>POS Integration Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>abacus_production</fullName>
            </value>
            <value>
                <fullName>abcfws_production</fullName>
            </value>
            <value>
                <fullName>academy_sports_production</fullName>
            </value>
            <value>
                <fullName>ace_hardware_production</fullName>
            </value>
            <value>
                <fullName>acelerate_production</fullName>
            </value>
            <value>
                <fullName>adora</fullName>
            </value>
            <value>
                <fullName>ahold_alcohol_production</fullName>
            </value>
            <value>
                <fullName>ahold_production</fullName>
            </value>
            <value>
                <fullName>albertsons</fullName>
            </value>
            <value>
                <fullName>albertsons_alcohol</fullName>
            </value>
            <value>
                <fullName>albertsons_convenience_production</fullName>
            </value>
            <value>
                <fullName>albertsons_deli</fullName>
            </value>
            <value>
                <fullName>albertsons_dsd_flash_production</fullName>
            </value>
            <value>
                <fullName>albertsons_dsd_production</fullName>
            </value>
            <value>
                <fullName>albertsons_grocery</fullName>
            </value>
            <value>
                <fullName>albertsons_pet</fullName>
            </value>
            <value>
                <fullName>albertsons_rapid</fullName>
            </value>
            <value>
                <fullName>aldelo</fullName>
            </value>
            <value>
                <fullName>aldi_production</fullName>
            </value>
            <value>
                <fullName>aloha_odsp</fullName>
            </value>
            <value>
                <fullName>altaine_production</fullName>
            </value>
            <value>
                <fullName>ambrosia_production</fullName>
            </value>
            <value>
                <fullName>amc_production</fullName>
            </value>
            <value>
                <fullName>and_pizza</fullName>
            </value>
            <value>
                <fullName>apna_bazaar_production</fullName>
            </value>
            <value>
                <fullName>applejack_production</fullName>
            </value>
            <value>
                <fullName>ArrowPOS</fullName>
            </value>
            <value>
                <fullName>associated_food_stores</fullName>
            </value>
            <value>
                <fullName>at_home_production</fullName>
            </value>
            <value>
                <fullName>atlantic_systems_alcohol_production</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>