sfdx-source/force-app/main/default/objects/Store_Detail__c/fields/Proposed_Date_of_Tablet__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Date_of_Tablet__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-15116: It indicates the onboarding event proposed date of tablet completion.</description>
    <inlineHelpText>Onboarding event proposed date of Tablet completion</inlineHelpText>
    <label>Proposed Date of Tablet</label>
    <type>Date</type>
</CustomField>