sfdx-source/force-app/main/default/objects/Store_Detail__c/fields/Provincial_Tax_Id__c.field-meta.xml
<CustomField>
    <fullName>Provincial_Tax_Id__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-23067: To store Provincial Tax ID.</description>
    <label>Provincial Tax Id</label>
    <length>18</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>