sfdx-source/force-app/main/default/objects/Store_Detail__c/fields/Rejected_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejected_Reason__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-18245: It represents the address rejection reasons.</description>
    <label>Address Rejection Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Address_Rejection_Reason</valueSetName>
    </valueSet>
</CustomField>