sfdx-source/force-app/main/default/objects/Store_Detail__c/fields/Representative_Email__c.field-meta.xml
<CustomField>
    <fullName>Representative_Email__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>LEM-15117: It indicates representative email.</description>
    <inlineHelpText>This is the Representative Email for Stripe Connected Account</inlineHelpText>
    <label>Representative Email</label>
    <type>Email</type>
</CustomField>