sfdx-source/force-app/main/default/objects/Store_Detail__c/fields/Representative_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Representative_Last_Name__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>LEM-15117: It indicates representative last name.</description>
    <inlineHelpText>This is the Representative Last Name for Stripe Connected Account</inlineHelpText>
    <label>Representative Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>